Updating for tutor help

--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@ section {
   background-image: linear-gradient(var(--main-color), var(--main-color));
   background-repeat: no-repeat;
 
-  /* -webkit-background-clip: text; */
+  -webkit-background-clip: text;
 
   background-position: 0 0;
   animation: homeBgText 6s linear infinite;
