--- a/src/App.css
+++ b/src/App.css
@@ -480,6 +480,7 @@ span {
 .contact {
   min-height: auto;
   padding-bottom: 7rem;
+  background: var(--second-bg-color);
 }
 
 .contact form {
@@ -551,7 +552,7 @@ span {
 
 .footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   padding: 2rem 9%;
