--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,7 @@ section {
   padding: 0 9%;
   background: url("https://kcm45.github.io/portfolio3.0/images/me-home.png")
     no-repeat;
+
   background-size: cover;
   background-position: center;
   background-color: var(--bg-color);
@@ -117,6 +118,7 @@ section {
   font-size: 5.6rem;
   font-weight: 700;
   line-height: 1.3;
+  max-width: 65%;
 }
 
 .home-content h1 span {
@@ -168,7 +170,7 @@ section {
   font-size: 1.6rem;
   color: var(--text-color);
   margin: 2rem 0 4rem;
-  max-width: 60rem;
+  max-width: 65%;
 }
 
 .btn-box {
@@ -264,21 +266,21 @@ section {
   width: 100%;
 }
 
-.home-imgHover {
+/* .home-imgHover {
   position: absolute;
   top: 0;
   right: 0;
   width: 45%;
   height: 100%;
   background: transparent;
-  /* border: 2px solid red; */
+  /* border: 2px solid red; 
   transition: 3s;
 }
 
 .home-imgHover:hover {
   background: var(--bg-color);
-  opacity: 0.8;
-}
+  /* opacity: 0.8; 
+} */
 
 .about {
   display: flex;
@@ -653,7 +655,12 @@ span {
   html {
     font-size: 50%;
   }
-
+  .home-content p {
+    max-width: 75%;
+  }
+  .home-imgHover {
+    opacity: 75%;
+  }
   .home-content h1 {
     font-size: 4.6rem;
     display: flex;
@@ -674,7 +681,9 @@ span {
   .home-content h1 {
     font-size: 5.2rem;
   }
-
+  .home-content p {
+    max-width: 75%;
+  }
   .education {
     padding: 10rem 4% 5rem 5%;
   }
@@ -686,7 +695,6 @@ span {
 @media (max-width: 371px) {
   .home {
     justify-content: center;
-    background: url("https://kcm45.github.io/portfolio3.0/images/portfolio-me.png");
   }
 
   .home-content {
@@ -704,6 +712,10 @@ span {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .home-content p {
+    max-width: 65%;
   }
 }
 
