--- a/src/App.css
+++ b/src/App.css
@@ -355,6 +355,28 @@ span {
   background: var(--second-bg-color);
 }
 
+.projects-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5rem;
+  padding: 5rem 0;
+}
+
+.project-card {
+  border: 2 px solid black;
+  background: var(--second-bg-color);
+}
+
+.project-img {
+  background: url(./assets/images/project1.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 25rem;
+}
+
 .education {
   display: flex;
   justify-content: center;
