--- a/src/App.css
+++ b/src/App.css
@@ -362,15 +362,21 @@ span {
   flex-wrap: wrap;
   gap: 5rem;
   padding: 5rem 0;
+  width: 100%;
+  background: red;
 }
 
-.project-card {
-  border: 2 px solid black;
+.project1-card {
+  border: 22px solid green;
   background: var(--second-bg-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 40rem;
 }
 
-.project-img {
-  background: url(./assets/images/project1.png) no-repeat;
+.project1-img {
+  background: "./assets/images/project1.png";
   background-size: cover;
   background-position: center;
   width: 100%;
