--- a/src/App.css
+++ b/src/App.css
@@ -361,26 +361,54 @@ span {
   align-items: center;
   flex-wrap: wrap;
   gap: 5rem;
-  padding: 5rem 0;
+  padding: 0;
+  margin: 0;
   width: 100%;
-  background: red;
+  height: auto;
 }
 
-.project1-card {
-  border: 22px solid green;
+.project-card {
   background: var(--second-bg-color);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  align-items: center;
   min-width: 40rem;
+  height: 80rem;
+  padding: 0;
+  margin: 0;
+}
+.project-img {
+  margin: 2rem;
+  width: 40rem;
+  height: 40rem;
 }
 
 .project1-img {
-  background: "./assets/images/project1.png";
+  background: url("./assets/images/youtube.png");
   background-size: cover;
   background-position: center;
-  width: 100%;
-  height: 25rem;
+  background-color: var(--bg-color);
+}
+
+.project2-img {
+  background: url("./assets/images/ai.png");
+  background-size: cover;
+  background-position: center;
+  background-color: var(--bg-color);
+  margin: 2rem;
+  width: 40rem;
+  height: 40rem;
+}
+
+.project-info h3 {
+  color: var(--main-color);
+  width: 40rem;
+  height: 40rem;
+  font-size: 22px;
+  font-style: bold;
+  text-align: center;
 }
 
 .education {
@@ -579,7 +607,7 @@ span {
   width: 100%;
 }
 
-.footer {
+footer {
   display: flex;
   justify-content: center;
   align-items: center;
