--- a/src/App.css
+++ b/src/App.css
@@ -355,6 +355,10 @@ span {
   background: var(--second-bg-color);
 }
 
+#projects {
+  padding-bottom: 5rem;
+}
+
 .projects-container {
   display: flex;
   justify-content: center;
@@ -372,10 +376,8 @@ span {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  align-items: center;
   min-width: 40rem;
-  height: 80rem;
+  height: 60rem;
   padding: 0;
   margin: 0;
 }
@@ -397,18 +399,34 @@ span {
   background-size: cover;
   background-position: center;
   background-color: var(--bg-color);
-  margin: 2rem;
-  width: 40rem;
-  height: 40rem;
 }
-
+.project3-img {
+  background: url("./assets/images/nike.png");
+  background-size: cover;
+  background-position: center;
+  background-color: var(--bg-color);
+}
+.project-info {
+  margin: 1rem;
+  width: 40rem;
+  height: 20rem;
+}
 .project-info h3 {
   color: var(--main-color);
   width: 40rem;
-  height: 40rem;
+  height: auto;
+  margin-bottom: 1rem;
   font-size: 22px;
   font-style: bold;
   text-align: center;
+}
+
+.project-info p {
+  color: var(--text-color);
+  width: 40rem;
+  height: auto;
+  margin-bottom: 1rem;
+  font-size: 18px;
 }
 
 .education {
@@ -506,7 +524,7 @@ span {
   flex-direction: column;
   min-height: auto;
   padding-bottom: 5rem;
-  gap: 5rem;
+  /* gap: 5rem; */
   background: var(--second-bg-color);
 }
 
@@ -519,9 +537,10 @@ span {
   flex-wrap: wrap;
 }
 
-.skills-icons a {
+.skills-icons div {
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 80px;
@@ -532,6 +551,12 @@ span {
   z-index: 1;
   overflow: hidden;
   transition: 0.5s;
+}
+
+.skills-icons p {
+  font-size: 1rem;
+  color: var(--text-color);
+  margin: 0;
 }
 
 .contact {
