--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,8 @@ body {
   left: 0;
   width: 100%;
   padding: 2rem 9%;
-  background: transparent;
+  /* background: transparent; */
+  background: var(--bg-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -101,8 +102,7 @@ section {
   display: flex;
   align-items: center;
   padding: 0 9%;
-  background: url("https://kcm45.github.io/portfolio3.0/images/me-home.png")
-    no-repeat;
+  background: url("./assets/images/me-home.png") no-repeat;
 
   background-size: cover;
   background-position: center;
@@ -759,6 +759,9 @@ footer {
 }
 
 @media (max-width: 462px) {
+  .home {
+    background: var(--bg-color);
+  }
   .home-content h1 {
     font-size: 5.2rem;
   }
@@ -776,6 +779,7 @@ footer {
 @media (max-width: 371px) {
   .home {
     justify-content: center;
+    background: var(--bg-color);
   }
 
   .home-content {
